--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.1",
+    "@codemirror/view": "^6.9.4",
+    "ace-builds": "^1.17.0",
     "core-js": "^3.8.3",
+    "prismjs": "^1.29.0",
     "vue": "^3.2.13",
+    "vue-codemirror": "^6.1.1",
     "vue3-easy-data-table": "^1.5.42",
     "vuetify": "^3.1.4",
     "vuex": "^4.1.0"
