--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "dotenv": "^16.0.3",
+    "mysql": "^2.18.1",
     "mysql2": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
