--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@codemirror/theme-one-dark": "^6.1.1",
     "@codemirror/view": "^6.9.4",
     "ace-builds": "^1.17.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "prismjs": "^1.29.0",
     "vue": "^3.2.13",
